get it working through passenger

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title>Caketop Movies</title>
-    <link href="/css/bootstrap.min.css" rel='stylesheet' type='text/css'>
-    <link href="/css/bootstrap-theme.css" rel='stylesheet' type='text/css'>
-    <link href="/css/custom.css" rel='stylesheet' type='text/css'>
-    <script src="/js/bootstrap.min.js"></script>
+    <link href="movies/css/bootstrap.min.css" rel='stylesheet' type='text/css'>
+    <link href="movies/css/bootstrap-theme.css" rel='stylesheet' type='text/css'>
+    <link href="movies/css/custom.css" rel='stylesheet' type='text/css'>
+    <script src="movies/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container">
