--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
     <link href="/css/custom.css" rel='stylesheet' type='text/css'>
     <script src="/js/jquery-1.10.2.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.lazyload.js"></script>
   </head>
   <body>
     <div class="container">
