--- a/views/index.erb
+++ b/views/index.erb
@@ -79,6 +79,7 @@
   }
 
   // activate lazyload
+  $('.container').height($(window).height() - 25);
   $('img.lazy').lazyload({
     effect : "fadeIn"
   });
