--- a/views/index.erb
+++ b/views/index.erb
@@ -46,6 +46,14 @@
               <th>Runtime: </th>
               <td><%= movie[10] %></td>
             </tr>
+            <tr>
+              <td>
+                <a href="http://www.imdb.com/title/<%= movie[3] %>/"><img src="img/button-imdb.png" /></a>
+              </td>
+              <td>
+                <a href="https://www.themoviedb.org/movie/<%= movie[2] %>"><img src="img/button-tmdb.png" /></a>
+              </td>
+            </tr>
           </table>
         </div>
       </div>
