--- a/views/index.erb
+++ b/views/index.erb
@@ -14,6 +14,7 @@
       <li><a href="?sort=release_date%20desc">Release Date (desc)</a></li>
       <li><a href="?sort=vote_average">Rating</a></li>
       <li><a href="?sort=vote_average%20desc">Rating (desc)</a></li>
+      <li><a href="?sort=random()">Random</a></li>
     </ul>
   </div>
 </span>
