make the same code work in sub-uris in prod as works in dev

--- a/views/index.erb
+++ b/views/index.erb
@@ -49,10 +49,10 @@
             </tr>
             <tr>
               <td>
-                <a href="http://www.imdb.com/title/<%= movie[3] %>/"><img src="img/button-imdb.png" /></a>
+                <a href="http://www.imdb.com/title/<%= movie[3] %>/"><%= image_tag "/img/button-imdb.png" %></a>
               </td>
               <td>
-                <a href="https://www.themoviedb.org/movie/<%= movie[2] %>"><img src="img/button-tmdb.png" /></a>
+                <a href="https://www.themoviedb.org/movie/<%= movie[2] %>"><%= image_tag "/img/button-tmdb.png" %></a>
               </td>
             </tr>
           </table>
