--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>Caketop Movies</title>
-    <link href="/css/bootstrap.min.css" rel='stylesheet' type='text/css'>
-    <link href="/css/bootstrap-theme.css" rel='stylesheet' type='text/css'>
-    <link href="/css/custom.css" rel='stylesheet' type='text/css'>
-    <script src="/js/jquery-1.10.2.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/jquery.lazyload.js"></script>
+    <title>Caketop Theater</title>
+    <%= stylesheet_link_tag "/css/bootstrap.min.css" %>
+    <%= stylesheet_link_tag "/css/bootstrap-theme.css" %>
+    <%= stylesheet_link_tag "/css/custom.css" %>
+    <%= javascript_script_tag "/js/jquery-1.10.2.min.js" %>
+    <%= javascript_script_tag "/js/bootstrap.min.js" %>
+    <%= javascript_script_tag "/js/jquery.lazyload.js" %>
   </head>
   <body>
     <div class="container">
