change index to point to symlink in public/library

--- a/views/index.erb
+++ b/views/index.erb
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-      <a href="http://caketop/files/nasdrive/movies/<%= movie[16] %>">Direct Link</a>
+      <%= link_to "Direct Link", "/library/#{ movie[16] }" %>
 
     </div>
   </div>
