add player and fix dick

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<movieh1>Library</h1>
+<h1>Library</h1>
 
 <span class="pull-right"><input class="form-control" id="search" name="search" placeholder="filter" type="search"></span>
 
