--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,7 @@
+body {
+  padding-top: 60px;
+}
+
 .sublegend {
   color: #bbb;
   font-size: 11;
@@ -5,4 +9,13 @@
 
 .container {
   padding-bottom:25px;
+}
+
+.movie-cell {
+  text-align:center;
+}
+
+.movie-thumb {
+  width: 100%;
+  padding-bottom:10px;
 }
