--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,8 +10,58 @@
   </head>
   <body>
     <div class="container">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <%= link_to "CAKETOP THEATER", '/', class: "navbar-brand" %>
+  <ul class="nav navbar-nav navbar-right" style="padding-right: 10px;">
+    <li><%= link_to "Home", "/" %></li>
+    <li>
+      <a href="#" data-toggle="modal" data-target="#request-modal">Request</a>
+    </li>
+    <li><%= link_to "Random", "/random" %></li>
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
+      <ul class="dropdown-menu">
+        <li><%= link_to 'All', '/browse' %></li>
+      </ul>
+    </li>
+    <li>
+      <form class="navbar-form" role="search" action="<%= link_to("asdf", "/search").split('"')[1] %>" method="post">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search" name="search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+    </li>
+  </ul>
+</nav>
       <%= yield %>
     </div>
+
+<div class="modal fade" id="request-modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Make a Request</h4>
+      </div>
+      <form action="<%= link_to("asdf", "/request").split('"')[1] %>" method="post">
+        <div class="modal-body">
+          <input type="text" name="name" placeholder="Your Name" class="form-control" required='true'><br>
+          <textarea name="request" class="form-control" placeholder="Movie and any relevant information (year, director, etc.)" required="true"></textarea>
+        </div>
+        <div class="modal-footer">
+          <input type="submit" class="btn btn-info">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<script>
+  $('img.lazy').lazyload({
+    effect : "fadeIn"
+  });
+</script>
   </body>
 </html>
 
