--- a/views/detail_movie_list.erb
+++ b/views/detail_movie_list.erb
@@ -1,3 +1,10 @@
+<style>
+  table th {
+    text-align: right;
+  }
+</style>
+
+
 <h2><%= title %></h2>
 
 <table>
@@ -26,41 +33,30 @@
 
 <% movies.each do |movie| %>
   <div class="row movie" style="padding-top:20px;">
-    <div class="col-md-3">
-      <img data-original="https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/<%= movie[7] %>" style="width:100%" class="lazy"></img>
+    <div class="col-md-2">
+      <%= link_to "<img data-original='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{ movie[7]}' style='width:100%' class='lazy'></img>", "/watch/#{ movie[16] }" %>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-10">
       <legend id="title"><%= movie[13] %> <span class="sublegend"><%= movie[16] %></span></legend>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-8">
           <p><%= movie[5] %></p>
+          <%= link_to "More Info", "/view/#{movie[2]}" %>
         </div>
-        <div class="col-md-6">
-          <table>
+        <div class="col-md-4">
+          <table width='100%'>
             <tr>
-              <th>Release Date: </th>
-              <td><%= movie[8] %></td>
+              <th>Released: </th><td><%= movie[8] %></td>
             </tr>
             <tr>
-              <th>TMDB Rating: </th>
-              <td><%= movie[14] %> (<%= movie[15] %> votes)</td>
+              <th>Rating: </th><td><%= "#{movie[14]} (#{movie[15]} votes)" %></td>
             </tr>
             <tr>
-              <th>Runtime: </th>
-              <td><%= movie[10] %></td>
-            </tr>
-            <tr>
-              <td>
-                <a href="http://www.imdb.com/title/<%= movie[3] %>/"><%= image_tag "/img/button-imdb.png" %></a>
-              </td>
-              <td>
-                <a href="https://www.themoviedb.org/movie/<%= movie[2] %>"><%= image_tag "/img/button-tmdb.png" %></a>
-              </td>
+              <th>Runtime: </th><td><%= movie[10] %></td>
             </tr>
           </table>
         </div>
       </div>
-      <%= link_to "Watch", "/watch/#{ movie[16] }" %>
     </div>
   </div>
 <% end %>
