--- a/views/genre.erb
+++ b/views/genre.erb
@@ -1,12 +1,16 @@
-<h2><%= title %></h2>
+<h2>Genres</h2>
 
-<% movies.each_slice(6) do |slice| %>
+<% genres.each do |g| %>
   <div class="row genre-row">
-    <% slice.each do |movie| %>
-      <div class="col-md-2 col-xs-4 movie-cell">
+    <div class="col-md-12">
+      <legend><%= link_to g[0], "/genre/#{g[1]}" %></legend>
+    </div>
+    <% movie_array[g[1]].each do |movie| %>
+      <div class="col-md-2 movie-cell">
         <%= link_to "<img data-original='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie[7]}' class='movie-thumb lazy'></img>", "/watch/#{ movie[16] }" %>
         <%= link_to movie[4], "/view/#{movie[2]}" %>
       </div>
     <% end %>
   </div>
 <% end %>
+
