--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,6 +22,7 @@
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
       <ul class="dropdown-menu">
         <li><%= link_to 'All', '/browse' %></li>
+        <li><%= link_to 'By Genre', '/genre' %></li>
       </ul>
     </li>
     <li>
