--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -23,3 +23,36 @@ body {
 .genre-row {
   padding-bottom:30px;
 }
+
+// Sticky Footer Stuff
+html,
+body {
+  height:100%
+}
+
+#wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100$;
+  margin: 0 auto -30px;
+}
+
+#push,
+#footer {
+  height: 30px;
+}
+#footer {
+  background-color: #eee;
+  text-align: right;
+  color: #a0a0a0;
+}
+
+@media (max-width: 767px) {
+  #footer {
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 20px;
+    padding-right 20px;
+  }
+}
+
