added informative about page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -43,7 +43,7 @@
 
   <div id="footer">
     <div class="container" style="height:30px;">
-      <p style="padding-top:5px">Not affiliated with Westmont College. Check out the code on <a href="https://github.com/XanderStrike/movie-browser/">Github</a>, or send <a href="#">feedback</a>.</p>
+      <p style="padding-top:5px">Not affiliated with Westmont College. <a href="https://github.com/XanderStrike/movie-browser/">Github</a>. <a href="#">Feedback</a>. <%= link_to "About", "/about" %>.</p>
     </div>
   </div>
 
