--- a/views/index.erb
+++ b/views/index.erb
@@ -35,8 +35,8 @@
   </div>
   <% random.each do |movie| %>
     <div class="col-md-2 movie-cell">
-      <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie[7]}' class='movie-thumb'></img>", "/watch/#{ movie[16] }" %>
-      <%= link_to movie[4], "/view/#{movie[2]}" %>
+      <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie.poster_path}' class='movie-thumb'></img>", "/watch/#{ movie.filename }" %>
+      <%= link_to movie.title, "/view/#{movie.id}" %>
     </div>
   <% end %>
 </div>
