--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
       <div class="row genre-row">
         <% slice.each do |movie| %>
         <div class="col-md-2 col-xs-4 movie-cell" >
-          <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie[7]}' class='movie-thumb'></img>", "/watch/#{ movie[16] }" %>
+          <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie[7]}' class='movie-thumb'></img>", "/watch/#{ movie[2] }" %>
           <span class="play"></span>
           <%= link_to movie[4], "/view/#{movie[2]}" %>
         </div>
@@ -21,10 +21,10 @@
   <div class="col-md-12">
     <legend>Enjoyed by Others</legend>
   </div>
-  <% recent[0..5].each do |movie| %>
+  <% recent.each do |movie| %>
     <div class="col-md-2 movie-cell">
-      <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie[11]}' class='movie-thumb'></img>", "/watch/#{ movie[20] }" %>
-      <%= link_to movie[8], "/view/#{movie[6]}" %>
+      <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie.poster_path}' class='movie-thumb'></img>", "/watch/#{ movie.id }" %>
+      <%= link_to movie.title, "/view/#{movie.id}" %>
     </div>
   <% end %>
 </div>
