all activerecord all the time in index

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,9 +7,9 @@
       <div class="row genre-row">
         <% slice.each do |movie| %>
         <div class="col-md-2 col-xs-4 movie-cell" >
-          <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie[7]}' class='movie-thumb'></img>", "/watch/#{ movie[2] }" %>
+          <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie.poster_path}' class='movie-thumb'></img>", "/watch/#{ movie.id }" %>
           <span class="play"></span>
-          <%= link_to movie[4], "/view/#{movie[2]}" %>
+          <%= link_to movie.title, "/view/#{movie.id}" %>
         </div>
         <% end %>
       </div>
