--- a/views/index.erb
+++ b/views/index.erb
@@ -35,7 +35,7 @@
   </div>
   <% random.each do |movie| %>
     <div class="col-md-2 movie-cell">
-      <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie.poster_path}' class='movie-thumb'></img>", "/watch/#{ movie.filename }" %>
+      <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie.poster_path}' class='movie-thumb'></img>", "/watch/#{ movie.id }" %>
       <%= link_to movie.title, "/view/#{movie.id}" %>
     </div>
   <% end %>
