--- a/views/detail_movie_list.erb
+++ b/views/detail_movie_list.erb
@@ -34,7 +34,7 @@
 <% movies.each do |movie| %>
   <div class="row movie" style="padding-top:20px;">
     <div class="col-md-2">
-      <%= link_to "<img data-original='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{ movie.poster_path }' style='width:100%' class='lazy'></img>", "/watch/#{ movie.id }" %>
+      <%= link_to image_tag("/img/posters/#{ movie.id }.jpg", class: 'movie-thumb'), "/watch/#{ movie.id }" %>
     </div>
     <div class="col-md-10">
       <legend id="title"><%= movie.title %> <span class="sublegend"><%= movie.filename %></span></legend>
