--- a/views/genre_view.erb
+++ b/views/genre_view.erb
@@ -7,7 +7,7 @@
       <div class="row genre-row">
         <% slice.each do |movie| %>
         <div class="col-md-2 col-xs-4 movie-cell" >
-          <%= link_to "<img src='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie[7]}' class='movie-thumb'></img>", "/watch/#{ movie[2] }" %>
+          <%= link_to image_tag("/img/posters/#{ movie[2] }.jpg", class: 'movie-thumb'), "/watch/#{ movie[2] }" %>
           <span class="play"></span>
           <%= link_to movie[4], "/view/#{movie[2]}" %>
         </div>
@@ -24,7 +24,7 @@
     </div>
     <% movie_hash[g[1]].each do |movie| %>
       <div class="col-md-2 movie-cell">
-        <%= link_to "<img data-original='https://d3gtl9l2a4fn1j.cloudfront.net/t/p/w500/#{movie[7]}' class='movie-thumb lazy'></img>", "/watch/#{ movie[2] }" %>
+        <%= link_to image_tag("/img/posters/#{ movie[2] }.jpg", class: 'movie-thumb'), "/watch/#{ movie[2] }" %>
         <%= link_to movie[4], "/view/#{movie[2]}" %>
       </div>
     <% end %>
