change wording on index

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,7 +19,7 @@
 
 <div class="row hidden-xs hidden-sm genre-row">
   <div class="col-md-12">
-    <legend>Enjoyed by Others</legend>
+    <legend>Recently Watched</legend>
   </div>
   <% recent.each do |movie| %>
     <div class="col-md-2 movie-cell">
