--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -56,3 +56,14 @@ body {
   }
 }
 
+.vid-container {
+  height: 550px;
+  text-align:center;
+  background-size: cover;
+  background-position:center center;
+}
+
+video {
+  width:100%;
+  height:100%;
+}
